==> bai-bit/AT32/Libraries/utilities/rtthread/bsp/at32/src/drv_gpio.c <==
#include "drv_gpio.h"
#include "gpio_init.h"
#include "exti.h"
#include "common.h"

static void at32_pin_write(rt_device_t dev, rt_base_t pin, rt_base_t value)
{
    uint8_t gpiox;
    
    gpiox = pin / 16;
    pin %= 16;
    
    if(value)
        value = 1;
    else
        value = 0;
    printf("11\r\n");
    GPIO_PinWrite(gpiox, pin, value);
}

static int at32_pin_read(rt_device_t dev, rt_base_t pin)
{
    uint8_t gpiox = 0;
    
    gpiox = pin / 16;
    pin = pin % 16;

    return read_gpioport(gpiox, pin);
}

static void at32_pin_mode(rt_device_t dev, rt_base_t pin, rt_base_t mode)
{
    const struct pin_index *index;
    uint8_t gpiox = 0;
    
    gpiox = pin / 16;
    pin = pin % 16; 

    switch(mode)
    {
        case PIN_MODE_INPUT :
            mode = GPIO_Mode_IN_FLOATING;
            break;
        case PIN_MODE_OUTPUT:
            mode = GPIO_Mode_Out_PP;
            break;
        case PIN_MODE_INPUT_PULLDOWN:
            mode = GPIO_Mode_IPD;
            break;
        case PIN_MODE_INPUT_PULLUP:
            mode = GPIO_Mode_IPU;
            break;
        case PIN_MODE_OUTPUT_OD:
            mode = GPIO_Mode_Out_OD;
            break;
        default:
            mode = GPIO_Mode_AIN;
    }
    
    GPIO_Init(gpiox, pin, mode);
}

static rt_err_t at32_pin_irq_enable(struct rt_device *device, rt_base_t pin, rt_uint32_t enabled)
{
    const struct pin_index *index;
    uint8_t trigger_mode = 0;
    uint8_t exti_mode = 0;
    uint8_t gpiox = pin / 16;
    uint8_t mode = GPIO_Mode_IN_FLOATING;
    uint8_t NVIC_IRQChannel = 0;
    
    pin %= 16;
    
    rt_base_t level;


    level = rt_hw_interrupt_disable();//πÿ±’÷–∂œ

    if (pin_irq_hdr_tab[pin].pin == -1)
    {
        rt_hw_interrupt_enable(level);
        return RT_ENOSYS;
    }
    
    switch (pin_irq_hdr_tab[pin].mode)
    {
    case PIN_IRQ_MODE_RISING:
        trigger_mode = rising;
        break;
    case PIN_IRQ_MODE_FALLING:
        trigger_mode = failling;
        break;
    case PIN_IRQ_MODE_RISING_FALLING:
        trigger_mode = failling_and_rising;
        break;
    }

    switch(pin)
    {
        case 0:
            NVIC_IRQChannel = EXTI0_IRQn;
            break;
        case 1:
            NVIC_IRQChannel = EXTI1_IRQn;
            break;
        case 2:
            NVIC_IRQChannel = EXTI2_IRQn;
            break;
        case 3:
            NVIC_IRQChannel = EXTI3_IRQn;
            break;
        case 4:
            NVIC_IRQChannel = EXTI4_IRQn;
            break;
        case 5:
        case 6:
        case 7:
        case 8:
        case 9:
            NVIC_IRQChannel = EXTI9_5_IRQn;
            break;
        case 10:
        case 11:
        case 12:
        case 13:
        case 14:
        case 15:
            NVIC_IRQChannel = EXTI15_10_IRQn;
            break;
        default:
            break;
    }

    rt_hw_interrupt_enable(level);


    GPIO_Init(gpiox, pin, mode);
    AFIO_Init(gpiox, pin);
    Exti_Init(gpiox, exti_mode, trigger_mode, enabled);
    NVIC_Init(NVIC_IRQChannel, 3, 2, enabled);

    return RT_EOK;
}

void GPIO_EXTI_IRQHandler(uint16_t GPIO_Pin)
{
    pin_irq_hdr(GPIO_Pin);
}
